added fallen amberwood leaves

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -233,15 +233,16 @@
   "block.ethermist.dawning_hyacinth_flower_pot": "Dawning Hyacinth Flower Pot",
 
   "block.ethermist.cinderbloom": "Cinderbloom",
-  "block.ethermist.cinderbloom_flower_pot": "Cinderbloom",
 
   "block.ethermist.slimy_allium": "Slimy Allium",
+
   "block.ethermist.small_abyssal_mushroom": "Small Abyssal Mushroom",
   "block.ethermist.abyssal_mushroom": "Abyssal Mushroom",
   "block.ethermist.tall_abyssal_mushroom": "Tall Abyssal Mushroom",
 
   "block.ethermist.rich_grass": "Rich Grass",
   "block.ethermist.rich_tall_grass": "Rich Tall Grass",
+  "block.ethermist.fallen_amberwood_leaves": "Fallen Amberwood Leaves",
 
   "block.ethermist.etherstone_copper_ore": "Etherstone Copper Ore",
   "block.ethermist.etherstone_iron_ore": "Etherstone Iron Ore",
