added cracked and mossy etherstone bricks

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -52,6 +52,12 @@
   "block.ethermist.etherstone_brick_slab": "Etherstone Brick Slab",
   "block.ethermist.etherstone_brick_wall": "Etherstone Brick Wall",
 
+  "block.ethermist.cracked_etherstone_bricks": "Cracked Etherstone Bricks",
+  "block.ethermist.mossy_etherstone_bricks": "Mossy Etherstone Bricks",
+  "block.ethermist.mossy_etherstone_brick_stairs": "Mossy Etherstone Brick Stairs",
+  "block.ethermist.mossy_etherstone_brick_slab": "Mossy Etherstone Brick Slab",
+  "block.ethermist.mossy_etherstone_brick_wall": "Mossy Etherstone Brick Wall",
+
   "block.ethermist.ancient_etherstone_bricks": "Ancient Etherstone Bricks",
   "block.ethermist.ancient_etherstone_brick_stairs": "Ancient Etherstone Brick Stairs",
   "block.ethermist.ancient_etherstone_brick_slab": "Ancient Etherstone Brick Slab",
