added long and strong potions for faster and slower casting

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -532,12 +532,30 @@
 
   "_comment": "--------------- Potions ---------------",
   "item.minecraft.potion.effect.em_faster_casting_potion": "Potion of Faster Casting",
-  "item.minecraft.splash_potion.effect.em_faster_casting_potion": "Potion of Faster Casting",
-  "item.minecraft.lingering_potion.effect.em_faster_casting_potion": "Potion of Faster Casting",
+  "item.minecraft.splash_potion.effect.em_faster_casting_potion": "Splash Potion of Faster Casting",
+  "item.minecraft.lingering_potion.effect.em_faster_casting_potion": "Lingering Potion of Faster Casting",
+  "item.minecraft.potion.effect.em_long_faster_casting_potion": "Potion of Faster Casting",
+  "item.minecraft.splash_potion.effect.em_long_faster_casting_potion": "Splash Potion of Faster Casting",
+  "item.minecraft.lingering_potion.effect.em_long_faster_casting_potion": "Lingering Potion of Faster Casting",
+  "item.minecraft.potion.effect.em_strong_faster_casting_potion": "Potion of Faster Casting",
+  "item.minecraft.splash_potion.effect.em_strong_faster_casting_potion": "Splash Potion of Faster Casting",
+  "item.minecraft.lingering_potion.effect.em_strong_faster_casting_potion": "Lingering Potion of Faster Casting",
+  "item.minecraft.tipped_arrow.effect.em_faster_casting_potion": "Arrow of Faster Casting",
+  "item.minecraft.tipped_arrow.effect.em_long_faster_casting_potion": "Arrow of Faster Casting",
+  "item.minecraft.tipped_arrow.effect.em_strong_faster_casting_potion": "Arrow of Faster Casting",
 
   "item.minecraft.potion.effect.em_slower_casting_potion": "Potion of Slower Casting",
-  "item.minecraft.splash_potion.effect.em_slower_casting_potion": "Potion of Slower Casting",
-  "item.minecraft.lingering_potion.effect.em_slower_casting_potion": "Potion of Slower Casting",
+  "item.minecraft.splash_potion.effect.em_slower_casting_potion": "Splash Potion of Slower Casting",
+  "item.minecraft.lingering_potion.effect.em_slower_casting_potion": "Lingering Potion of Slower Casting",
+  "item.minecraft.potion.effect.em_long_slower_casting_potion": "Potion of Slower Casting",
+  "item.minecraft.splash_potion.effect.em_long_slower_casting_potion": "Splash Potion of Slower Casting",
+  "item.minecraft.lingering_potion.effect.em_long_slower_casting_potion": "Lingering Potion of Slower Casting",
+  "item.minecraft.potion.effect.em_strong_slower_casting_potion": "Potion of Slower Casting",
+  "item.minecraft.splash_potion.effect.em_strong_slower_casting_potion": "Splash Potion of Slower Casting",
+  "item.minecraft.lingering_potion.effect.em_strong_slower_casting_potion": "Lingering Potion of Slower Casting",
+  "item.minecraft.tipped_arrow.effect.em_slower_casting_potion": "Arrow of Slower Casting",
+  "item.minecraft.tipped_arrow.effect.em_long_slower_casting_potion": "Arrow of Slower Casting",
+  "item.minecraft.tipped_arrow.effect.em_strong_slower_casting_potion": "Arrow of Slower Casting",
 
   "_comment": "--------------- GUI ---------------",
   "creativetab.ethermist.em_block_tab": "Ethermist Blocks",
