added arcane amp and arcane damp potions/effects

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -557,6 +557,32 @@
   "item.minecraft.tipped_arrow.effect.em_long_slower_casting_potion": "Arrow of Slower Casting",
   "item.minecraft.tipped_arrow.effect.em_strong_slower_casting_potion": "Arrow of Slower Casting",
 
+  "item.minecraft.potion.effect.em_arcane_amplification_potion": "Potion of Arcane Amplification",
+  "item.minecraft.splash_potion.effect.em_arcane_amplification_potion": "Splash Potion of Arcane Amplification",
+  "item.minecraft.lingering_potion.effect.em_arcane_amplification_potion": "Lingering Potion of Arcane Amplification",
+  "item.minecraft.potion.effect.em_long_arcane_amplification_potion": "Potion of Arcane Amplification",
+  "item.minecraft.splash_potion.effect.em_long_arcane_amplification_potion": "Splash Potion of Arcane Amplification",
+  "item.minecraft.lingering_potion.effect.em_long_arcane_amplification_potion": "Lingering Potion of Arcane Amplification",
+  "item.minecraft.potion.effect.em_strong_arcane_amplification_potion": "Potion of Arcane Amplification",
+  "item.minecraft.splash_potion.effect.em_strong_arcane_amplification_potion": "Splash Potion of Arcane Amplification",
+  "item.minecraft.lingering_potion.effect.em_strong_arcane_amplification_potion": "Lingering Potion of Arcane Amplification",
+  "item.minecraft.tipped_arrow.effect.em_arcane_amplification_potion": "Arrow of Arcane Amplification",
+  "item.minecraft.tipped_arrow.effect.em_long_arcane_amplification_potion": "Arrow of Arcane Amplification",
+  "item.minecraft.tipped_arrow.effect.em_strong_arcane_amplification_potion": "Arrow of Arcane Amplification",
+
+  "item.minecraft.potion.effect.em_arcane_dampening_potion": "Potion of Arcane Dampening",
+  "item.minecraft.splash_potion.effect.em_arcane_dampening_potion": "Splash Potion of Arcane Dampening",
+  "item.minecraft.lingering_potion.effect.em_arcane_dampening_potion": "Lingering Potion of Arcane Dampening",
+  "item.minecraft.potion.effect.em_long_arcane_dampening_potion": "Potion of Arcane Dampening",
+  "item.minecraft.splash_potion.effect.em_long_arcane_dampening_potion": "Splash Potion of Arcane Dampening",
+  "item.minecraft.lingering_potion.effect.em_long_arcane_dampening_potion": "Lingering Potion of Arcane Dampening",
+  "item.minecraft.potion.effect.em_strong_arcane_dampening_potion": "Potion of Arcane Dampening",
+  "item.minecraft.splash_potion.effect.em_strong_arcane_dampening_potion": "Splash Potion of Arcane Dampening",
+  "item.minecraft.lingering_potion.effect.em_strong_arcane_dampening_potion": "Lingering Potion of Arcane Dampening",
+  "item.minecraft.tipped_arrow.effect.em_arcane_dampening_potion": "Arrow of Arcane Dampening",
+  "item.minecraft.tipped_arrow.effect.em_long_arcane_dampening_potion": "Arrow of Arcane Dampening",
+  "item.minecraft.tipped_arrow.effect.em_strong_arcane_dampening_potion": "Arrow of Arcane Dampening",
+
   "_comment": "--------------- GUI ---------------",
   "creativetab.ethermist.em_block_tab": "Ethermist Blocks",
   "creativetab.ethermist.em_item_tab": "Ethermist Items",
