pylons now display a timer, and include owner name if there is one

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -273,6 +273,7 @@
 
   "_comment": "--------------- GENERIC ---------------",
   "generic.ethermist.time.seconds": " Seconds",
+  "generic.ethermist.pylon.name_suffix": "'s Pylon",
 
   "_comment": "--------------- ITEMS ---------------",
   "item.ethermist.wooden_wand_handle": "Wooden Wand Handle",
