--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -238,6 +238,9 @@
   "block.ethermist.dawning_hyacinth": "Dawning Hyacinth",
   "block.ethermist.dawning_hyacinth_flower_pot": "Dawning Hyacinth Flower Pot",
 
+  "block.ethermist.chronothorn": "Chronothorn",
+  "block.ethermist.chronothorn_flower_pot": "Chronothorn Flower Pot",
+
   "block.ethermist.cinderbloom": "Cinderbloom",
 
   "block.ethermist.slimy_allium": "Slimy Allium",
