made subtitle translation more in line with vanilla

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -611,5 +611,5 @@
   "block.ethermist.wandforging_table.jei": "Wandforging",
 
   "_comment": "--------------- Sounds ---------------",
-  "sounds.ethermist.chronothorn_rewind": "Chronothorn Rewind"
+  "subtitles.block.chronothorn.rewind": "Chronothorn Rewind"
 }
