--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -423,6 +423,12 @@
   "item.ethermist.shroom_cluster": "Shroom Cluster",
   "item.ethermist.toasted_shroom_cluster": "Toasted Shroom Cluster",
 
+  "_comment": "--------------- ARMORS ---------------",
+  "item.ethermist.leather_hood": "Leather Hood",
+  "item.ethermist.leather_robes": "Leather Robes",
+  "item.ethermist.leather_legguards": "Leather Legguards",
+  "item.ethermist.leather_footwraps": "Leather Footwraps",
+
   "_comment": "--------------- SPAWN EGGS ---------------",
   "item.ethermist.gloomie_spawn_egg": "Gloomie Spawn Egg",
   "item.ethermist.glimmerbug_queen_spawn_egg": "Glimmerbug Queen Spawn Egg",
