--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -429,6 +429,11 @@
   "item.ethermist.leather_legguards": "Leather Legguards",
   "item.ethermist.leather_footwraps": "Leather Footwraps",
 
+  "item.ethermist.iron_hood": "Iron Hood",
+  "item.ethermist.iron_robes": "Iron Robes",
+  "item.ethermist.iron_legguards": "Iron Legguards",
+  "item.ethermist.iron_footwraps": "Iron Footwraps",
+
   "_comment": "--------------- SPAWN EGGS ---------------",
   "item.ethermist.gloomie_spawn_egg": "Gloomie Spawn Egg",
   "item.ethermist.glimmerbug_queen_spawn_egg": "Glimmerbug Queen Spawn Egg",
