--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -434,6 +434,11 @@
   "item.ethermist.iron_legguards": "Iron Legguards",
   "item.ethermist.iron_footwraps": "Iron Footwraps",
 
+  "item.ethermist.golden_hood": "Golden Hood",
+  "item.ethermist.golden_robes": "Golden Robes",
+  "item.ethermist.golden_legguards": "Golden Legguards",
+  "item.ethermist.golden_footwraps": "Golden Footwraps",
+
   "_comment": "--------------- SPAWN EGGS ---------------",
   "item.ethermist.gloomie_spawn_egg": "Gloomie Spawn Egg",
   "item.ethermist.glimmerbug_queen_spawn_egg": "Glimmerbug Queen Spawn Egg",
