added gold, diamond, and netherite hood, and amethyst crown

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -434,6 +434,10 @@
   "_comment": "--------------- EQUIPMENT ---------------",
   "item.ethermist.leather_hood": "Leather Hood",
   "item.ethermist.iron_hood": "Iron Hood",
+  "item.ethermist.golden_hood": "Golden Hood",
+  "item.ethermist.diamond_hood": "Diamond Hood",
+  "item.ethermist.netherite_hood": "Netherite Hood",
+  "item.ethermist.amethyst_crown": "Amethyst Crown",
 
   "_comment": "--------------- ENCHANTMENTS ---------------",
   "enchantment.ethermist.quick_cast": "Quick Cast",
